--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+# Vendor folder is removed from git
+/[Aa]ssets/[Vv]endor/
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
